Fixed Scroll to top button position on mobile

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -328,6 +328,7 @@
       }
     }
     .scroll-to-top {
+      position: absolute;
       right: 0;
       left: 0;
       bottom: 1.5rem;
